manage node version with pnpm

--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,6 @@
 strict-peer-dependencies=false
 auto-install-peers=true
+use-node-version=16.20.0
 
 public-hoist-pattern[]=*ts-node*
 public-hoist-pattern[]=*@typescript-eslint*
