--- a/packages/plugin-common/package.json
+++ b/packages/plugin-common/package.json
@@ -1,7 +1,6 @@
 {
-   "name": "plugin-common",
-   "version": "0.0.0",
-   "private": true,
+   "name": "@lazy-init/plugin-common",
+   "version": "2.1.0",
    "main": "dist/index.js",
    "types": "dist/index.d.ts",
    "scripts": {
