--- a/packages/plugin-swc-core/package.json
+++ b/packages/plugin-swc-core/package.json
@@ -17,7 +17,7 @@
       "@swc/core": "~1.3.29"
    },
    "dependencies": {
-      "plugin-common": "workspace:*",
+      "@lazy-init/plugin-common": "workspace:*",
       "semver": "^7.3.8"
    },
    "devDependencies": {
