--- a/packages/plugin-nextjs/package.json
+++ b/packages/plugin-nextjs/package.json
@@ -1,6 +1,6 @@
 {
    "name": "@lazy-init/nextjs-plugin",
-   "version": "2.1.1",
+   "version": "2.2.0",
    "license": "AGPL-3.0-only",
    "description": "SWC plugin for use with lazy-init.",
    "homepage": "https://github.com/reiss-d/lazy-init#readme",
@@ -14,7 +14,7 @@
       "prepack": "shx rm -f dist/swc_plugin_lazy_init.wasm"
    },
    "peerDependencies": {
-      "next": "^13.1.4"
+      "next": ">= 13.1.4 <= 13.2.3"
    },
    "dependencies": {
       "@lazy-init/plugin-common": "workspace:*",
