--- a/packages/plugin-swc-core/package.json
+++ b/packages/plugin-swc-core/package.json
@@ -1,6 +1,6 @@
 {
    "name": "@lazy-init/swc-core-plugin",
-   "version": "2.1.1",
+   "version": "2.2.0",
    "license": "AGPL-3.0-only",
    "description": "SWC plugin for use with lazy-init.",
    "homepage": "https://github.com/reiss-d/lazy-init#readme",
@@ -14,7 +14,7 @@
       "prepack": "shx rm -f dist/swc_plugin_lazy_init.wasm"
    },
    "peerDependencies": {
-      "@swc/core": "~1.3.29"
+      "@swc/core": ">= 1.3.29 <= 1.3.37 || 1.3.38 || >= 1.3.40 <= 1.3.42"
    },
    "dependencies": {
       "@lazy-init/plugin-common": "workspace:*",
