chore: use commitizen

--- a/.npmrc
+++ b/.npmrc
@@ -2,7 +2,8 @@ strict-peer-dependencies=false
 auto-install-peers=true
 use-node-version=16.20.0
 
-public-hoist-pattern[]=*ts-node*
+public-hoist-pattern[]=*commitizen*
+public-hoist-pattern[]=*cz-conventional-changelog*
 public-hoist-pattern[]=*@typescript-eslint*
 public-hoist-pattern[]=*tsutils*
 public-hoist-pattern[]=*eslint*
