--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
    "devDependencies": {
       "@types/jest": "^29.5.0",
       "@types/node": "^18.15.11",
+      "commitizen": "^4.3.0",
+      "cz-conventional-changelog": "^3.3.0",
       "dotenv-cli": "^7.1.0",
       "jest": "^29.5.0",
       "shx": "^0.3.4",
@@ -42,6 +44,11 @@
       "typedoc": "0.23.26",
       "typedoc-plugin-markdown": "^3.14.0",
       "typedoc-plugin-missing-exports": "^1.0.0"
+   },
+   "config": {
+      "commitizen": {
+         "path": "cz-conventional-changelog"
+      }
    },
    "keywords": [
       "cache",
