feat(plugin): support `swc_core@v0.75.0` and drop older versions
Upgrade `swc_core` to the latest version as it has fixed the bug in `next-swc`.

BREAKING CHANGE: Plugin targets with versions below `@swc/core@1.3.49` and `v13.3.1-canary.12` are
no longer supported.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,7 @@
    "typescript.tsdk": "node_modules/typescript/lib",
    "rust-analyzer.check.allTargets": false,
    "rust-analyzer.cargo.features": [
-      "use-swc_core_v054_59",
+      "use-swc_core_v075",
       "use-testing",
       "use-plugin_transform"
    ],
@@ -25,7 +25,7 @@
       "clippy",
       "--workspace",
       "--features",
-      "use-swc_core_v054_59 use-testing use-plugin_transform",
+      "use-swc_core_v075 use-testing use-plugin_transform",
       "--all-targets",
       "--tests",
       "--examples",
