feat(plugin-installer): update supported target versions
Target versions checked now include those compatible with the latest version of `swc_core`.

BREAKING CHANGE: Targets with versions below `@swc/core@1.3.49` and `next@13.3.1-canary.12` that
were previously compatible, will now throw and request the user to downgrade lazy-init to a working
version.

--- a/packages/plugin-nextjs/package.json
+++ b/packages/plugin-nextjs/package.json
@@ -14,7 +14,7 @@
       "prepack": "shx rm -f dist/swc_plugin_lazy_init.wasm"
    },
    "peerDependencies": {
-      "next": ">= 13.1.4 <= 13.2.3"
+      "next": ">= 13.3.1-canary.12"
    },
    "dependencies": {
       "@lazy-init/plugin-common": "workspace:*",
