--- a/package.json
+++ b/package.json
@@ -16,34 +16,30 @@
    "scripts": {
       "e:dev": "dotenv -e .env.development --",
       "e:prod": "dotenv -e .env.production --",
-
       "build": "pnpm e:dev turbo run build",
       "build:pkgs": "pnpm e:dev turbo run build --filter=./packages/*",
       "build:crates": "pnpm e:dev turbo run build --filter=./crates/*",
-
       "test": "pnpm e:dev pnpm install && turbo run test",
       "test:pkgs": "pnpm e:dev turbo run test --filter=./packages/*",
       "test:crates": "pnpm e:dev turbo run test --filter=./crates/*",
-
       "typedoc": "pnpm e:dev turbo run typedoc",
       "bench": "pnpm e:dev turbo run bench --filter=./packages/benchmark",
       "release": "pnpm e:prod turbo run release --no-cache --force && pnpm publish -r",
-
       "plugin:postinstall": "pnpm e:dev pnpm install",
       "build:plugins": "pnpm e:dev turbo run build --filter=./**/plugin-* && pnpm plugin:postinstall"
    },
    "devDependencies": {
-      "@types/jest": "^29.5.0",
-      "@types/node": "^18.15.11",
+      "@types/jest": "^29.5.1",
+      "@types/node": "^18.16.1",
       "commitizen": "^4.3.0",
       "cz-conventional-changelog": "^3.3.0",
-      "dotenv-cli": "^7.1.0",
+      "dotenv-cli": "^7.2.1",
       "jest": "^29.5.0",
       "shx": "^0.3.4",
-      "turbo": "^1.8.8",
-      "typedoc": "0.23.26",
-      "typedoc-plugin-markdown": "^3.14.0",
-      "typedoc-plugin-missing-exports": "^1.0.0"
+      "turbo": "^1.9.3",
+      "typedoc": "^0.24.6",
+      "typedoc-plugin-markdown": "^3.15.2",
+      "typedoc-plugin-missing-exports": "^2.0.0"
    },
    "config": {
       "commitizen": {
