--- a/packages/eslint-plugin-lazy-init/package.json
+++ b/packages/eslint-plugin-lazy-init/package.json
@@ -30,12 +30,14 @@
       "eslint": "^6.0.0 || ^7.0.0 || ^8.0.0"
    },
    "devDependencies": {
-      "@typescript-eslint/eslint-plugin": "^5.54.0",
-      "@typescript-eslint/utils": "^5.54.0",
+      "@typescript-eslint/eslint-plugin": "^5.59.1",
+      "@typescript-eslint/parser": "^5.59.1",
+      "@typescript-eslint/utils": "^5.59.1",
+      "eslint": "^8.39.0",
       "eslint-config-internal-base": "workspace:*",
       "tsconfig": "workspace:*",
-      "tsup": "^6.6.3",
-      "typescript": "^4.9.5"
+      "tsup": "^6.7.0",
+      "typescript": "^5.0.4"
    },
    "keywords": [
       "eslint",
