--- a/packages/plugin-swc-core/package.json
+++ b/packages/plugin-swc-core/package.json
@@ -18,13 +18,14 @@
    },
    "dependencies": {
       "@lazy-init/plugin-common": "workspace:*",
-      "semver": "^7.3.8"
+      "semver": "^7.5.0"
    },
    "devDependencies": {
-      "@types/node": "^18.15.3",
+      "@swc/core": "^1.3.55",
+      "@types/node": "^18.16.1",
       "eslint-config-internal-base": "workspace:*",
       "tsconfig": "workspace:*",
-      "typescript": "^4.9.5"
+      "typescript": "^5.0.4"
    },
    "files": [
       "dist",
