--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
    "devDependencies": {
       "@types/jest": "^29.5.1",
       "@types/node": "^18.16.1",
+      "@types/shelljs": "^0.8.12",
       "commitizen": "^4.3.0",
+      "concurrently": "^8.0.1",
       "cz-conventional-changelog": "^3.3.0",
       "dotenv-cli": "^7.2.1",
       "jest": "^29.5.0",
+      "shelljs": "^0.8.5",
       "shx": "^0.3.4",
       "turbo": "^1.9.3",
       "typedoc": "^0.24.6",
