--- a/packages/lazy-init/tsconfig.json
+++ b/packages/lazy-init/tsconfig.json
@@ -1,8 +1,8 @@
 {
    "extends": "tsconfig/base.json",
    "compilerOptions": {
-      "outDir": "tdist",
       "paths": {
+         // used for testing
          "lazy-init": ["./src/index.ts"],
          "lazy-init/cache": ["./src/cache.ts"]
       },
