fix(lazy-init): usage without bundler fails
When using `lazy-init` in a plain project (no bundler), local modules would fail to resolve.
Fixed by adding file extensions to local imports e.g './base' -> './base.js'.

--- a/packages/lazy-init/tsconfig.json
+++ b/packages/lazy-init/tsconfig.json
@@ -3,10 +3,11 @@
    "compilerOptions": {
       "paths": {
          // used for testing
+         // NOTE: these are NOT real paths, jest will resolve to `dist` folder
          "lazy-init": ["./src/index.ts"],
          "lazy-init/cache": ["./src/cache.ts"]
       },
       "types": ["jest", "node"]
    },
-   "include": ["src", "tests", "downlevel.js"]
+   "include": ["src", "tests", "build-helpers.js"]
 }
