--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
       "typedoc": "pnpm e:dev turbo run typedoc",
       "bench": "pnpm e:dev turbo run bench --filter=./packages/benchmark",
       "release": "pnpm e:prod turbo run release --no-cache --force && pnpm publish -r",
-      "plugin:postinstall": "pnpm e:dev pnpm install",
-      "build:plugins": "pnpm e:dev turbo run build --filter=./**/plugin-* && pnpm plugin:postinstall"
+      "plugin:postinstall": "pnpm e:dev pnpm install"
    },
    "devDependencies": {
       "@types/jest": "^29.5.1",
@@ -37,12 +36,14 @@
       "cz-conventional-changelog": "^3.3.0",
       "dotenv-cli": "^7.2.1",
       "jest": "^29.5.0",
+      "json": "^11.0.0",
       "shelljs": "^0.8.5",
       "shx": "^0.3.4",
       "turbo": "^1.9.3",
       "typedoc": "^0.24.6",
       "typedoc-plugin-markdown": "^3.15.2",
-      "typedoc-plugin-missing-exports": "^2.0.0"
+      "typedoc-plugin-missing-exports": "^2.0.0",
+      "typescript": "^5.0.4"
    },
    "config": {
       "commitizen": {
