--- a/packages/lazy-init/package.json
+++ b/packages/lazy-init/package.json
@@ -7,80 +7,72 @@
    "repository": "https://github.com/reiss-d/lazy-init.git",
    "bugs": "https://github.com/reiss-d/lazy-init/issues",
    "author": "Reiss Davidson",
+   "publishConfig": {
+      "directory": "dist",
+      "linkDirectory": true
+   },
    "exports": {
       "./package.json": "./package.json",
       ".": {
          "import": {
-            "types@<5.0": "./dist/esm/index.d.mts",
-            "types": "./dist/ts5.0/esm/index.d.mts",
-            "default": "./dist/esm/index.mjs"
+            "types@<5.0": "./esm/index.d.mts",
+            "types": "./ts5.0/esm/index.d.mts",
+            "default": "./esm/index.mjs"
          },
          "module": {
-            "types@<5.0": "./dist/esm/index.esm.d.ts",
-            "types": "./dist/ts5.0/esm/index.esm.d.ts",
-            "default": "./dist/esm/index.esm.js"
+            "types@<5.0": "./esm/index.esm.d.ts",
+            "types": "./ts5.0/esm/index.esm.d.ts",
+            "default": "./esm/index.esm.js"
          },
          "require": {
-            "types@<5.0": "./dist/index.d.ts",
-            "types": "./dist/ts5.0/index.d.ts",
-            "default": "./dist/index.js"
+            "types@<5.0": "./index.d.ts",
+            "types": "./ts5.0/index.d.ts",
+            "default": "./index.js"
          }
       },
       "./cache": {
          "import": {
-            "types@<5.0": "./dist/esm/cache.d.mts",
-            "types": "./dist/ts5.0/esm/cache.d.mts",
-            "default": "./dist/esm/cache.mjs"
+            "types@<5.0": "./esm/cache.d.mts",
+            "types": "./ts5.0/esm/cache.d.mts",
+            "default": "./esm/cache.mjs"
          },
          "module": {
-            "types@<5.0": "./dist/esm/cache.esm.d.ts",
-            "types": "./dist/ts5.0/esm/cache.esm.d.ts",
-            "default": "./dist/esm/cache.esm.js"
+            "types@<5.0": "./esm/cache.esm.d.ts",
+            "types": "./ts5.0/esm/cache.esm.d.ts",
+            "default": "./esm/cache.esm.js"
          },
          "require": {
-            "types@<5.0": "./dist/cache.d.ts",
-            "types": "./dist/ts5.0/cache.d.ts",
-            "default": "./dist/cache.js"
+            "types@<5.0": "./cache.d.ts",
+            "types": "./ts5.0/cache.d.ts",
+            "default": "./cache.js"
          }
       }
    },
    "typesVersions": {
       "<5.0": {
-         "dist/index.d.ts": [
-            "dist/index.d.ts"
-         ],
-         "cache": [
-            "dist/cache.d.ts"
-         ],
          "*": [
-            "dist/*"
+            "*"
          ]
       },
       "*": {
-         "dist/index.d.ts": [
-            "dist/ts5.0/index.d.ts"
-         ],
-         "cache": [
-            "dist/ts5.0/cache.d.ts"
-         ],
          "*": [
-            "dist/ts5.0/*"
+            "ts5.0/*"
          ]
       }
    },
-   "main": "./dist/index.js",
-   "module": "./dist/esm/index.mjs",
-   "types": "./dist/index.d.ts",
+   "main": "./index.js",
+   "module": "./esm/index.mjs",
+   "types": "./index.d.ts",
    "files": [
-      "dist",
-      "package.json",
-      "LICENSE"
+      "**"
    ],
    "sideEffects": false,
    "scripts": {
-      "build": "pnpm clean && tsup-node --config tsup.config.ts && pnpm downlevel",
-      "clean": "shx rm -rf dist && shx cp -u ../../README.md . && shx mkdir -p dist/ts5.0/esm",
-      "downlevel": "shx cp -R dist/*.d.ts dist/ts5.0 && concurrently \"node downlevel.js\" \"node downlevel.js --ts5\"",
+      "build": "pnpm clean && tsup-node --config tsup.config.ts && pnpm fix-types && pnpm downlevel",
+      "clean": "shx rm -rf dist && shx mkdir -p dist/ts5.0/esm && pnpm copy",
+      "copy": " shx cp ../../README.md package.json LICENSE dist && json -I -f dist/package.json -e \"this.publishConfig=undefined; this.devDependencies=undefined; this.scripts=undefined;\"",
+      "fix-types": "shx cp -R dist/*.d.ts dist/ts5.0 && node build-helpers.js --fix-ext",
+      "downlevel": "concurrently \"node build-helpers.js --downlevel\" \"node build-helpers.js --downlevel --ts5\"",
       "test": "jest",
       "typedoc": "typedoc --excludeExternals"
    },
