test: add integration tests with multiple TS versions

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,4 +1,6 @@
 packages:
    - 'configs/*'
    - 'crates/*'
+   - 'integration-tests/nextjs/*'
+   - 'integration-tests/swc-core/*'
    - 'packages/*'
