--- a/packages/plugin-nextjs/package.json
+++ b/packages/plugin-nextjs/package.json
@@ -9,7 +9,7 @@
    "author": "Reiss Davidson",
    "main": "dist/swc_plugin_lazy_init.wasm",
    "scripts": {
-      "build": "tsc",
+      "build": "tsup-node --config tsup.config.ts",
       "postinstall": "node dist/postinstall.js",
       "prepack": "shx rm -f dist/swc_plugin_lazy_init.wasm"
    },
@@ -25,6 +25,7 @@
       "eslint-config-internal-base": "workspace:*",
       "next": "^13.3.1-canary.12",
       "tsconfig": "workspace:*",
+      "tsup": "^6.7.0",
       "typescript": "^5.0.4"
    },
    "files": [
