--- a/packages/plugin-nextjs/package.json
+++ b/packages/plugin-nextjs/package.json
@@ -23,7 +23,7 @@
    "devDependencies": {
       "@types/node": "^18.16.1",
       "eslint-config-internal-base": "workspace:*",
-      "next": "^13.3.1-canary.12",
+      "next": "^13.4.3",
       "tsconfig": "workspace:*",
       "tsup": "^6.7.0",
       "typescript": "^5.0.4"
