refactor(lazy-init): remove "lazy-init/cache" export
Now that the "lzc" method has been added to the base export I have decided to drop this way of
caching by default. It adds unnecessary complexity to the build for a one letter tradeoff.

BREAKING CHANGE: The path "lazy-init/cache" no longer exists. It should be replaced with `import {
lzc } from "lazy-init"`.

--- a/packages/lazy-init/tsconfig.json
+++ b/packages/lazy-init/tsconfig.json
@@ -4,8 +4,7 @@
       "paths": {
          // used for testing
          // NOTE: these are NOT real paths, jest will resolve to `dist` folder
-         "lazy-init": ["./src/index.ts"],
-         "lazy-init/cache": ["./src/cache.ts"]
+         "lazy-init": ["./src/index.ts"]
       },
       "types": ["jest", "node"]
    },
