--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
    },
    "[markdown]": {
       "editor.formatOnSave": true,
-      "editor.defaultFormatter": "dprint.dprint"
+      "editor.defaultFormatter": "dprint.dprint",
+      "editor.wordWrap": "off"
    },
    "files.exclude": {
       "**/node_modules": true,
