--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
       "shx": "^0.3.4",
       "turbo": "^1.10.13",
       "typedoc": "^0.25.1",
-      "typedoc-plugin-markdown": "^3.16.0",
+      "typedoc-plugin-markdown": "4.0.0-next.20",
       "typedoc-plugin-missing-exports": "^2.1.0",
       "typescript": "^5.2.2"
    },
