style: add dprint toml plugin

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,10 @@
       "editor.defaultFormatter": "dprint.dprint",
       "editor.wordWrap": "off"
    },
+   "[toml]": {
+      "editor.formatOnSave": true,
+      "editor.defaultFormatter": "dprint.dprint"
+   },
    "files.exclude": {
       "**/node_modules": true,
       "**/.next": true,
@@ -20,9 +24,8 @@
    "typescript.tsdk": "node_modules/typescript/lib",
    "rust-analyzer.check.allTargets": false,
    "rust-analyzer.cargo.features": [
-      "use-swc_core_v076",
+      // "use-plugin_transform",
       "use-testing"
-      // "use-plugin_transform"
    ],
    "rust-analyzer.check.overrideCommand": [
       "cargo",
@@ -30,8 +33,8 @@
       "clippy",
       "--workspace",
       "--features",
-      // "use-swc_core_v076 use-testing use-plugin_transform",
-      "use-swc_core_v076 use-testing",
+      // "use-plugin_transform",
+      "use-testing",
       "--all-targets",
       "--tests",
       "--examples",
