--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,5 @@
 packages:
    - 'configs/*'
    - 'crates/*'
-   - 'integration-tests/nextjs/*'
-   - 'integration-tests/swc-core/*'
+   - 'integration-tests/*'
    - 'packages/*'
