--- a/packages/plugin-esbuild/tsconfig.json
+++ b/packages/plugin-esbuild/tsconfig.json
@@ -1,7 +1,7 @@
 {
    "extends": "tsconfig/base.json",
    "compilerOptions": {
-      "types": ["jest", "node"]
+      "outDir": "dist"
    },
-   "include": ["src", "tests"]
+   "include": ["src"]
 }
