--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
       "concurrently": "^8.2.1",
       "cz-conventional-changelog": "^3.3.0",
       "dotenv-cli": "^7.3.0",
+      "fast-glob": "^3.3.1",
       "jest": "^29.6.4",
       "json": "^11.0.0",
       "shelljs": "^0.8.5",
