chore: update turbo configs

--- a/packages/lazy-init/turbo.json
+++ b/packages/lazy-init/turbo.json
@@ -3,7 +3,7 @@
    "extends": ["//"],
    "pipeline": {
       "build": {
-         "dependsOn": ["^build", "lazy-init-plugin#build"],
+         "dependsOn": ["^build"],
          "inputs": [
             "src/**/*.ts",
             "src/**/*.tsx",
