build(fix): add noop scripts to trigger turbo "release" task
n

--- a/packages/lazy-init/package.json
+++ b/packages/lazy-init/package.json
@@ -43,7 +43,8 @@
       "clean": "shx rm -rf dist && shx mkdir -p dist && pnpm copy",
       "copy": "shx cp ../../README.md package.json LICENSE dist && json -I -f dist/package.json -e \"this.publishConfig=undefined; this.devDependencies=undefined; this.scripts=undefined;\"",
       "test": "jest",
-      "typedoc": "typedoc"
+      "typedoc": "typedoc",
+      "release": ""
    },
    "dependencies": {
       "uft": "^0.1.3"
