--- a/crates/lazy-init-plugin/package.json
+++ b/crates/lazy-init-plugin/package.json
@@ -14,6 +14,7 @@
    "main": "./swc_plugin_lazy_init.wasm",
    "scripts": {
       "build": "cargo build -p swc_plugin_lazy_init --release --no-default-features --features use-plugin_transform --target wasm32-wasi && shx cp ../../target/wasm32-wasi/release/swc_plugin_lazy_init.wasm package.json LICENSE dist",
-      "test": "cargo test -p swc_plugin_lazy_init --no-default-features --features use-testing -- --show-output"
+      "test": "cargo test -p swc_plugin_lazy_init --no-default-features --features use-testing -- --show-output",
+      "release": ""
    }
 }
