--- a/packages/eslint-plugin-lazy-init/package.json
+++ b/packages/eslint-plugin-lazy-init/package.json
@@ -17,7 +17,8 @@
    "sideEffects": false,
    "scripts": {
       "build": "tsc -b tsconfig.build.json",
-      "test": "jest"
+      "test": "jest",
+      "release": ""
    },
    "dependencies": {
       "tslib": "^2.6.2",
