--- a/packages/esbuild-plugin/package.json
+++ b/packages/esbuild-plugin/package.json
@@ -25,6 +25,7 @@
       "@lazy-init/plugin-swc-v83": "workspace:*",
       "@swc/core": "1.3.85",
       "minimatch": "^9.0.3",
+      "resolve-from": "^5.0.0",
       "uft": "^0.2.0"
    },
    "devDependencies": {
