chore: update rust

--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -1,16 +1,19 @@
 use_small_heuristics = "Off"
 format_strings = true
 format_macro_matchers = true
+binop_separator = "Back"
 hex_literal_case = "Lower"
 imports_granularity = "Crate"
 reorder_impl_items = true
 use_field_init_shorthand = true
 wrap_comments = true
+single_line_if_else = true
 max_width = 80
 fn_call_width = 50
 attr_fn_like_width = 50
 array_width = 40
-chain_width = 50
+chain_width = 60
 single_line_if_else_max_width = 80
 match_block_trailing_commas = true
 overflow_delimited_expr = true
+tab_spaces = 3
