feat(crate): visitor_state_macro helper

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [workspace]
 members = [
   "crates/lazy-init-plugin",
+  "crates/visitor_state_macro",
 ]
+resolver = "2"
 
 [profile.dev]
 incremental = true
