feat(plugin): add block expression transform
Add support for transforming the body of a function into inline/wrapped statements - imitating block
expressions from other languages.

BREAKING CHANGE: The plugin has undergone extensive refactoring and has updated configuration
options.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,26 +22,11 @@
       "**/.swc": true
    },
    "typescript.tsdk": "node_modules/typescript/lib",
-   "rust-analyzer.check.allTargets": false,
-   "rust-analyzer.cargo.features": [
-      // "use-plugin_transform",
-      "use-testing"
-   ],
-   "rust-analyzer.check.overrideCommand": [
-      "cargo",
-      "+nightly",
-      "clippy",
-      "--workspace",
-      "--features",
-      // "use-plugin_transform",
-      "use-testing",
-      "--all-targets",
-      "--tests",
-      "--examples",
-      "--benches",
-      "--message-format=json",
-      "--",
-      "-D",
-      "clippy::all"
-   ]
+   "rust-analyzer.check.command": "clippy"
+   // "rust-analyzer.check.features": [
+   //    "use-plugin_transform"
+   // ],
+   // "rust-analyzer.cargo.features": [
+   //    "use-plugin_transform"
+   // ]
 }
