--- a/crates/lazy-init-plugin/Cargo.toml
+++ b/crates/lazy-init-plugin/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "swc_plugin_lazy_init"
-version = "0.0.1"
+version = "2.0.0"
 authors = ["Reiss Davidson <https://github.com/reiss-d>"]
 edition = "2021"
 license = "MIT"
@@ -11,7 +11,6 @@ description = "SWC plugin for lazily initalizing variables."
 crate-type = ["cdylib", "rlib"]
 
 [features]
-use-testing = []
 use-plugin_transform = [
   "swc_core/common",
   "swc_core/ecma_plugin_transform",
@@ -23,17 +22,29 @@ swc_atoms = "0.5.9"
 swc_common = "0.32.1"
 swc_core = { version = "0.83.14", optional = true }
 swc_ecma_ast = "0.109.1"
+swc_ecma_minifier = "0.187.10"
 swc_ecma_utils = "0.123.0"
 swc_ecma_visit = "0.95.1"
 
+bitflags = "2.4.1"
+either = "1.9.0"
+lazy_static = "1.4.0"
 rand = { version = "0.8.5", optional = true }
 serde = { version = "=1.0.188", features = ["derive"] }
 serde_json = "1"
+serde_repr = "0.1"
 tracing = { version = "0.1.37", features = ["release_max_level_off"] }
+visitor_state_macro = { version = "1", path = "../visitor_state_macro" }
 
 [dev-dependencies]
 swc_ecma_parser = "0.140.0"
 swc_ecma_transforms_base = "0.133.2"
+
+# --- shared dependencies from `swc_ecma_transforms_testing`
+ansi_term = "0.12.1"
+swc_ecma_codegen = "0.145.2"
 swc_ecma_transforms_testing = "0.136.1"
 
+# --- shared dependencies from `testing`
+pretty_assertions = "1.3"
 testing = "0.34.1"
