--- a/crates/lazy-init-plugin/package.json
+++ b/crates/lazy-init-plugin/package.json
@@ -1,6 +1,6 @@
 {
    "name": "@lazy-init/plugin-swc-v83",
-   "version": "1.0.1",
+   "version": "2.0.0",
    "license": "MIT",
    "description": "SWC plugin for use with lazy-init.",
    "homepage": "https://github.com/reiss-d/lazy-init#readme",
@@ -14,7 +14,10 @@
    "main": "./swc_plugin_lazy_init.wasm",
    "scripts": {
       "build": "cargo build -p swc_plugin_lazy_init --release --no-default-features --features use-plugin_transform --target wasm32-wasi && shx cp ../../target/wasm32-wasi/release/swc_plugin_lazy_init.wasm package.json LICENSE dist",
-      "test": "cargo test -p swc_plugin_lazy_init --no-default-features --features use-testing -- --show-output",
+      "test": "cargo test -p swc_plugin_lazy_init --no-default-features",
+      "test:analyzer": "cargo test block_analyzer_test -p swc_plugin_lazy_init --no-default-features",
+      "test:block": "cargo test lazy_block_test -p swc_plugin_lazy_init --no-default-features",
+      "test:hoist": "cargo test lazy_hoist_test -p swc_plugin_lazy_init --no-default-features",
       "release": ""
    }
 }
